Fixed jvm options